--- a/app/src/main/assets/overlays/org.omnirom.gramophone/res/values/colors.xml
+++ b/app/src/main/assets/overlays/org.omnirom.gramophone/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@android:color/holo_blue_light</color>
-    <color name="colorPrimaryDark">@android:color/holo_blue_dark</color>
+    <color name="colorPrimary">@android:color/holo_blue_bright</color>
+    <color name="colorPrimaryDark">@*android:color/holo_green_dark</color>
     <color name="colorAccent">@android:color/holo_blue_bright</color>
+    <color name="tabIndicatorColor">@android:color/white</color>
 </resources>
