--- a/app/src/main/assets/overlays/com.android.launcher3/res/values/colors.xml
+++ b/app/src/main/assets/overlays/com.android.launcher3/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="all_apps_divider_color">@android:color/holo_blue_bright</color>
     <color name="all_apps_caret_color">@android:color/holo_blue_bright</color>
+    <color name="all_apps_container_color">@android:color/holo_blue_light</color>
+    <color name="all_apps_search_text_color">#ffffff</color>
 </resources>
