--- a/app/src/main/assets/overlays/android/res/values/bools.xml
+++ b/app/src/main/assets/overlays/android/res/values/bools.xml
@@ -2,4 +2,5 @@
 <resources>
     <bool name="config_useDarkBgNotificationIconTextTinting">false</bool>
     <!--<bool name="config_allowNotificationIconTextTinting">false</bool>-->
+    <bool name="config_invert_colors_on_doze">true</bool>
 </resources>
